refactor(bin): 优化多个配置文件中的 Pod 调度设置
- 注释掉 golang124.yaml 和 hyperf74.yaml 中的 tolerations 部分
- 更新 kind.sample.yaml 中的控制节点说明，增加安全提示
- 删除 misc.xml 中的 XML 声明

--- a/bin/golang124.yaml
+++ b/bin/golang124.yaml
@@ -36,11 +36,11 @@ spec:
         - name: web-root
           hostPath:
             path: /opt/www
-      ## 原则上pod应该在worker节点，但是由于k8s集群的资源有限，可以手动将pod调度到master控制节点
-      tolerations:
-        - key: "node-role.kubernetes.io/control-plane"
-          operator: "Exists"
-          effect: "NoSchedule"
+#      ## 原则上pod应该在worker节点，但是由于k8s集群的资源有限，可以手动将pod调度到master控制节点
+#      tolerations:
+#        - key: "node-role.kubernetes.io/control-plane"
+#          operator: "Exists"
+#          effect: "NoSchedule"
 ---
 apiVersion: v1
 kind: Service
