chore: 重新组织配置文件并更新 .gitignore
-将 kind.sample.yaml 文件从 bin目录移动到 bin/kubernetes 目录
- 修改 .gitignore 文件，更新配置文件路径
-修正 kind.sample.yaml 文件中的注释拼写错误

--- a/bin/kubernetes/kind.sample.yaml
+++ b/bin/kubernetes/kind.sample.yaml
@@ -1,5 +1,5 @@
 # kind 配置文件，用于在 macOS 本地创建 Kubernetes 集群
-# 建议与podman、clima一起使用
+# 建议与podman/clima一起使用
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 # 集群名称（可选，默认为 kind）
